--- a/config.org
+++ b/config.org
@@ -2417,10 +2417,7 @@ With the package installed, we are ready to define ~org-agenda-custom-commands~ 
                                (todo priority-down category-keep)
                                (tags priority-down category-keep)
                                (search category-keep)))
-
-(org-super-agenda-groups      '((:name "Today"
-                                 :and  (:date today :not (:todo "IDEA")))
-                                (:name "Next Items"
+(org-super-agenda-groups      '((:name "Next Items"
                                  :and (:todo "NEXT" :not (:tag ("consume"))))
                                 (:name "Important"
                                  :and (:priority "A" :not (:todo "WAIT")))
