--- a/config.org
+++ b/config.org
@@ -2838,6 +2838,15 @@ Lastly, let's activate =git-gutter= for remote files as well.
 (setq! +vc-gutter-in-remote-files t)
 #+end_src
 
+*** Vterm
+
+Make =urls= clickable in ~vterm~ modes.
+
+#+begin_src elisp
+(after! vterm
+  (add-hook! vterm-mode #'goto-address-mode))
+#+end_src
+
 *** Vue
 
 The language server =VLS= does not analyze the templates of ~.vue~ files by default,
