feat(telega): Use default completion.

--- a/config.org
+++ b/config.org
@@ -2720,6 +2720,7 @@ Minimal configuration to be able to build the server and load the cache.
   (telega-video-player-command '(concat "mpv"
                                         (when telega-ffplay-media-timestamp
                                           (format " --start=%f" telega-ffplay-media-timestamp))))
+  (telega-completing-read-function completing-read-function)
   (telega-server-libs-prefix (getenv "TDLIB_PREFIX")))
 #+end_src
 
