--- a/config.org
+++ b/config.org
@@ -2033,10 +2033,7 @@ Finally, lazily load the package and it's =evil= keybindings when calling an ent
 
 #+begin_src elisp
 (use-package! kubernetes
-  :defer t
-  :config
-  (setq kubernetes-poll-frequency 3600
-        kubernetes-redraw-frequency 3600))
+  :defer t)
 
 (use-package! kubernetes-evil
   :after kubernetes-overview)
