chore: Depracated go and lua modules.

--- a/config.org
+++ b/config.org
@@ -1105,7 +1105,7 @@ Better integration of Emacs with the terminal emulator, particularly:
        ;;fsharp            ; ML stands for Microsoft's Language
        ;;fstar             ; (dependent) types and (monadic) effects and Z3
        ;;gdscript          ; the language you waited for
-       (go +lsp)           ; the hipster dialect
+       ;;(go +lsp)           ; the hipster dialect
        ;;(haskell +lsp)      ; a language that's lazier than I am
        ;;hy                ; readability of scheme w/ speed of python
        ;;idris             ;
@@ -1118,7 +1118,7 @@ Better integration of Emacs with the terminal emulator, particularly:
        ;;lean
        ;;factor
        ;;ledger            ; an accounting system in Emacs
-       (lua +lsp +fennel)  ; one-based indices? one-based indices
+       ;;(lua +lsp +fennel)  ; one-based indices? one-based indices
        markdown          ; writing docs for people to ignore
        ;;nim               ; python + lisp at the speed of c
        nix               ; I hereby declare "nix geht mehr!"
