feat(mc): Enabled `multiple-cursors`.

--- a/config.org
+++ b/config.org
@@ -752,7 +752,12 @@ work with =lispyville='s commands. Bummer.
 #+begin_src elisp :tangle init.el
        ;;god             ; run Emacs commands without modifier keys
        lispy             ; vim for lisp, for people who don't like vim
-       ;; multiple-cursors    ; editing in many places at once
+#+end_src
+
+***** TODO multiple-cursors
+
+#+begin_src elisp :tangle init.el
+       multiple-cursors    ; editing in many places at once
 #+end_src
 
 ***** parinfer
