--- a/config.org
+++ b/config.org
@@ -1176,14 +1176,7 @@ Emacs has support for any buzzword you can imagine, even =blockchain technologie
        solidity          ; do you need a blockchain? No.
        ;;swift             ; who asked for emoji variables?
        ;;terra             ; Earth and Moon in alignment for performance.
-#+end_src
-
-***** web
-
-May not like it, but cannot escape it. The frontend is here.
-
-#+begin_src elisp :tangle init.el
-       (web +lsp)          ; the tubes
+       ;;(web +lsp)          ; the tubes
 #+end_src
 
 ***** TODO yaml
